Improve setup menu for small screens.

--- a/style/components.scss
+++ b/style/components.scss
@@ -13,7 +13,7 @@
   justify-content: space-between;
   align-items: flex-end;
   color: var(--footer-version-color);
-  font-size: min(18px, 150%);
+  font-size: 1rem;
 
   p {
     color: var(--footer-version-color);
