Add a settings and documentation page.

--- a/style/colors-dark.scss
+++ b/style/colors-dark.scss
@@ -49,6 +49,10 @@ body.dark-mode {
   // text-color
   --text-color: hsl(0, 0%, 50%);
 
+  // link color
+  --link-color: hsl(240, 50%, 70%);
+  --link-hover-color: hsl(240, 50%, 85%);
+
   // SETUP SCREEN
 
   // settings menu options
