--- a/style/colors.scss
+++ b/style/colors.scss
@@ -89,6 +89,10 @@ $blue: hsl(214deg, 64%, 50%);
   // text-color
   --text-color: hsl(0, 0%, 0%);
 
+  // link color
+  --link-color: hsl(240, 70%, 50%);
+  --link-hover-color: hsl(240, 70%, 20%);
+
   // SETUP SCREEN
 
   // settings menu options
