--- a/style/main.scss
+++ b/style/main.scss
@@ -6,6 +6,7 @@
 @use "./grid-display.scss";
 @use "./screen-menu.scss";
 @use "./screen-game.scss";
+@use "./screen-settings.scss";
 @use "./screen-paint.scss";
 @use "./score-overlay.scss";
 @use "./screen-setup.scss";
