Add language picker to settings.

--- a/style/screen-settings.scss
+++ b/style/screen-settings.scss
@@ -109,6 +109,11 @@
       flex-grow: 0;
       flex-shrink: 0;
     }
+
+    .setting-row {
+      width: 50%;
+      margin-right: 0.5em;
+    }
   }
 
   p.version-line {
