--- a/style/screen-menu.scss
+++ b/style/screen-menu.scss
@@ -46,22 +46,18 @@ $logo-height: min(15vw, 10vh);
     }
   }
 
-  .button-settings-menu {
+  .button-row {
     position: absolute;
     top: sizes.$button-top;
     right: sizes.$button-right;
-  }
+    display: flex;
+    flex-direction: row-reverse;
+    flex-wrap: wrap;
 
-  .button-setup-menu {
-    position: absolute;
-    top: sizes.$button-top;
-    right: calc(1.25 * sizes.$button-scale + sizes.$button-right);
-  }
-
-  .button-paint-menu {
-    position: absolute;
-    top: sizes.$button-top;
-    right: calc(2.5 * sizes.$button-scale + sizes.$button-right);
+    .game-button {
+      margin-left: calc(0.25 * sizes.$button-scale);
+      margin-bottom: calc(0.25 * sizes.$button-scale);
+    }
   }
 
   .game-list {
@@ -90,6 +86,12 @@ $logo-height: min(15vw, 10vh);
       &:hover {
         transform: scale(1.1);
       }
+    }
+  }
+
+  @media screen and (min-aspect-ratio: 4 / 4) and (max-aspect-ratio: 5 / 3) {
+    .button-row {
+      flex-direction: column;
     }
   }
 
