--- a/style/screens/screen-setup.scss
+++ b/style/screens/screen-setup.scss
@@ -1,9 +1,7 @@
-@use "./sizes.scss";
+@use "../sizes.scss";
 
 .screen.game-setup {
   position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
   background: var(--panel-bg-color);
@@ -57,7 +55,7 @@
 
 .screen.game-setup .game-button.exit {
   position: absolute;
-  right: sizes.$button-right;
+  left: sizes.$button-left;
   top: sizes.$button-top;
 }
 
@@ -67,7 +65,7 @@
   bottom: sizes.$button-margin-height;
 }
 
-.screen.game-setup .button-row {
+.screen.game-setup .buttons {
   grid-row: span 2;
   align-self: center;
   justify-self: center;
