--- a/style/components/screens.scss
+++ b/style/components/screens.scss
@@ -15,7 +15,6 @@
 
   transition: background-color 50ms;
 
-  /*
   animation-name: animate-appear;
   animation-delay: 100ms;
   animation-duration: 500ms;
@@ -23,11 +22,10 @@
 
   &.disappear {
     animation-name: animate-disappear;
-    animation-delay: 100ms;
+    animation-delay: 0;
     animation-duration: 500ms;
     animation-fill-mode: forwards;
   }
-  */
 }
 
 .screen.with-navbar {
