--- a/style/screens/screen-menu.scss
+++ b/style/screens/screen-menu.scss
@@ -2,23 +2,27 @@
 
 .screen.main-menu {
   display: grid;
-  grid-template-rows: 3fr min-content minmax(min-content, 4fr);
-  grid-template-areas: "." "atlas-picker-grid" "logo";
+  grid-template-rows: minmax(min-content, 3fr) min-content minmax(
+      min-content,
+      4fr
+    );
+  grid-template-areas: "header" "atlas-picker-grid" "logo";
 
-  $logo-height: max(min(15vw, 15vh), sizes.$button-scale);
+  $logo-height: max(min(12vw, 12vh), sizes.$button-scale);
 
   .atlas-picker-grid {
     grid-area: atlas-picker-grid;
     --grid-columns: 2;
     --grid-rows: 2;
-    --grid-margin-height: (8vh + #{$logo-height});
+    --grid-margin-height: (15vh + #{$logo-height});
+    --grid-margin-width: 2vh;
   }
 
   @media screen and (min-aspect-ratio: 10 / 7) {
     .atlas-picker-grid {
       --grid-columns: 4;
       --grid-rows: 1;
-      --grid-margin-width: 4vh;
+      --grid-margin-width: 3vh;
     }
   }
 
@@ -31,6 +35,7 @@
     justify-content: center;
     width: 100%;
     padding: calc(0.15 * $logo-height) 0 calc(0.4 * $logo-height) 0;
+    padding-top: 0;
 
     svg {
       height: $logo-height;
@@ -39,29 +44,64 @@
     }
   }
 
-  /*
-    .example-tile:nth-child(1) {
-      animation: example-tile-appear-left 300ms;
+  .header {
+    grid-area: header;
+
+    width: 100%;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-self: flex-start;
+    align-items: flex-start;
+    color: var(--footer-version-color);
+    font-size: 1rem;
+    padding-top: calc(var(--safe-area-max-inset-top) + 1rem);
+
+    p {
+      color: var(--footer-version-color);
+      margin: 0;
+      padding: 0;
     }
 
-    .example-tile:nth-child(2) {
-      animation: example-tile-appear-right 300ms;
+    p.copyright,
+    a {
+      color: var(--footer-copyright-color);
     }
 
-    .example-tile:nth-child(3),
-    .example-tile:nth-child(4) {
-      animation: example-tile-appear-bottom 300ms;
+    a {
+      text-decoration: none;
     }
 
-    .logo {
-      animation: example-tile-appear-bottom 300ms;
+    a:active,
+    a:hover {
+      color: var(--footer-link-hover-color);
     }
-  */
+  }
+
+  .atlas-picker-option:nth-child(1) {
+    animation: example-tile-appear-left 300ms;
+    animation-delay: 50ms;
+  }
+
+  .atlas-picker-option:nth-child(2) {
+    animation: example-tile-appear-right 300ms;
+    animation-delay: 50ms;
+  }
+
+  .atlas-picker-option:nth-child(3),
+  .atlas-picker-option:nth-child(4) {
+    animation: example-tile-appear-bottom 300ms;
+    animation-delay: 50ms;
+  }
+
+  .logo {
+    animation: example-tile-appear-bottom 300ms;
+  }
 }
 
-/*
 @keyframes example-tile-appear-left {
-  20% {
+  0% {
     transform: translate(-50vw, 0);
   }
   100% {
@@ -70,7 +110,7 @@
 }
 
 @keyframes example-tile-appear-right {
-  20% {
+  0% {
     transform: translate(50vw, 0);
   }
   100% {
@@ -79,20 +119,10 @@
 }
 
 @keyframes example-tile-appear-bottom {
-  20% {
-    transform: translate(0, 50vw);
-  }
-  100% {
-    transform: translate(0, 0);
-  }
-}
-
-@keyframes example-tile-appear-bottom-reverse {
-  100% {
-    transform: translate(0, 50vw);
-  }
   0% {
+    transform: translate(0, 50vw);
+  }
+  100% {
     transform: translate(0, 0);
   }
 }
-*/
