--- a/style/screens/screen-settings.scss
+++ b/style/screens/screen-settings.scss
@@ -21,6 +21,8 @@
   grid-template-areas: ". . ." ". navbar ." ". article ." ". . .";
   overflow-y: auto;
 
+  animation: none;
+
   nav {
     justify-self: center;
   }
