Disable dropdown change animation.

--- a/style/components/setting-rows.scss
+++ b/style/components/setting-rows.scss
@@ -86,9 +86,11 @@
   margin: 0;
   height: 100%;
 }
+/*
 .setting-row-option.current.changed {
   animation: 300ms linear setting-row-option-change-anim;
 }
+*/
 @keyframes setting-row-option-change-anim {
   0% {
   }
