--- a/style/screens/screen-menu.scss
+++ b/style/screens/screen-menu.scss
@@ -79,20 +79,38 @@
     }
   }
 
-  .atlas-picker-option:nth-child(1) {
-    animation: example-tile-appear-left 300ms;
+  .atlas-picker-option {
+    animation-duration: 300ms;
     animation-delay: 50ms;
+  }
+  .atlas-picker-option:nth-child(1) {
+    animation-name: example-tile-appear-left;
   }
 
   .atlas-picker-option:nth-child(2) {
-    animation: example-tile-appear-right 300ms;
-    animation-delay: 50ms;
+    animation-name: example-tile-appear-right;
   }
 
   .atlas-picker-option:nth-child(3),
   .atlas-picker-option:nth-child(4) {
-    animation: example-tile-appear-bottom 300ms;
-    animation-delay: 50ms;
+    animation-name: example-tile-appear-bottom;
+  }
+
+  @media screen and (min-aspect-ratio: 10 / 7) {
+    .atlas-picker-option:nth-child(1),
+    .atlas-picker-option:nth-child(2) {
+      animation-name: example-tile-appear-left;
+    }
+
+    .atlas-picker-option:nth-child(3),
+    .atlas-picker-option:nth-child(4) {
+      animation-name: example-tile-appear-right;
+    }
+
+    .atlas-picker-option:nth-child(2),
+    .atlas-picker-option:nth-child(3) {
+      animation-duration: 200ms;
+    }
   }
 
   .logo {
